--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -30,7 +30,7 @@ style_mono_accent(
   header_background_content_padding_top = "2rem", 
   header_font_google = google_font("Lato"),
   text_font_google   = google_font("Montserrat", "300", "300i", "500"),
-  code_font_google   = google_font("Source Code Pro"), 
+  code_font_google   = google_font("Source Code Pro", "300", "500"), 
   extra_css = list("p" = list("margin-block-start" = "0.5em", 
                               "margin-block-end" = "0.5em"), 
                    "ul" = list("margin-block-start" = "0.5em", 
@@ -77,6 +77,14 @@ Success requires self-advocacy
 * identify tools and platforms for publishing interim research products
 
 ---
+# Costs
+
+* to my knowledge, all of the tools introduced here are *free*
+  - they may have paid tiers with additional features
+  - funding sources often include large non-profits, funding agencies, etc.
+* **DO be aware that some platforms are run by for-profit publishing companies that are monetizing data on academics**
+
+---
 class: inverse, center, middle
 
 # FAIR
@@ -95,13 +103,13 @@ class: inverse, center, middle
 # Findable
 
 * Can humans and machines find the data?
-  - use metadata that accurately describe the content
-  - use metadata that helps other people find the content
+  - use metadata that accurately *describes* the content
+  - use metadata that helps people *find* the content
   
 ---
 # Metadata
 
-data that describes or gives information about other data
+**`[def]`** data that describes or gives information about other data
 
 --
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">The ISO country code for Namibia is NA, which has been a hilariously frustrating discovery I made while coding today <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a></p>&mdash; Sarah Bowden (@mamabphd) <a href="https://twitter.com/mamabphd/status/1273352107240968193?ref_src=twsrc%5Etfw">June 17, 2020</a></blockquote> 
@@ -112,20 +120,21 @@ data that describes or gives information about other data
 
 * there should be minimal barriers to access the data
   - e.g. no proprietary interfaces or software required
+  - "available upon (reasonable) request" is insufficient!
 * use established methods to authenticate access to protected or private data
 
 ---
 # Interoperable
 
 * use a common, shared format for storage
-* use a metadata standard to document attributes
+* use a metadata standard for attributes
   - [FAIR Data Point](https://github.com/FAIRDataTeam/FAIRDataPoint/wiki/FAIR-Data-Point-Specification) is one
   - some are domain-specific, e.g. [Ecological Metadata Language](https://eml.ecoinformatics.org/)
 
 ---
 # Reusable
 
-* describe the data and metadata well for researchers to identify whether it is suitable for their usage
+* add descriptions to help researchers identify whether it is suitable for their usage
 * use a legal license that enables re-use
   - e.g. CC-BY or CC-0
   - **don't use a code license**, e.g. MIT
@@ -162,7 +171,6 @@ class: inverse, center, middle
 
 * https://orcid.org/
 * Open Researcher and Contributor IDentifier
-* free to use
 * unique ID that stays with you, regardless of changes in name, email, institution
 * common way to login to journals and identify yourself on publications
 
@@ -170,18 +178,27 @@ class: inverse, center, middle
 # Google Scholar
 
 * https://scholar.google.com/
-* free to use
-* track your works, correct issues in them
-* citation statistics (imperfect, but easy for people to check)
+* IMO, does the best job of automatically identifying your *papers*
+* allows you to correct errors in the records for your works
+* citation statistics
+  - these are imperfect, but LOTS of people care and this makes it easy for them to check
+
+---
+# LinkedIn
+
+* https://www.linkedin.com/
+* a *must* if you are considering a position in industry
+* use the right buzzwords for your skills
+  - find people with jobs that you aspire to, and see what buzzwords they use
 
 ---
 # Other
 
-* LinkedIn - if you want to make industry connections
-* whatever other sites are commonly used in your field
-* a personal website:
-  - lots of options here
-  - let me know if a workshop on making websites would be useful!
+* ask around to see what sites are common in your field
+  - not just what people use, but what they use to *look up or find applicants*
+* consider a personal website:
+  - present more detailed information NOT found in other sites
+  - many free and nice options (custom domains are about $10/year)
   
 ---
 
@@ -203,7 +220,7 @@ class: inverse, center, middle
 * DOIs are permanent
   - the object and metadata record are archived
 * unambiguous
-  - each DOI links to a unique object
+  - each DOI links to a unique object, and will only ever link to that object
   
 ---
 # Why is this Important?
@@ -228,7 +245,7 @@ Most journals issue a DOI for each article.
 --
 
 * **A DOI makes that work citable!**
-  + (for fellowship/grant/job applications)
+  + for fellowship/grant/job applications
 
 ---
 class: inverse, center, middle
@@ -246,26 +263,26 @@ class: inverse, center, middle
 ---
 # Preprints
 
-* places to post papers *pre*-publication
+* papers, before peer-review and journal formatting
 * very common in math & physics, catching on elsewhere
 
 --
 
 why?
 
-* share what your work more quickly
+* share your work more quickly
   - not delayed until peer review
 * (sometimes) get feedback
 
 ---
 # Preprint servers
 
-* arXiv -- primary one for math and physics
-  - no DOI
-* bioRxiv -- primary one for biology
-* medRxiv -- primary one for health sciences
+* [arXiv.org](https://arxiv.org/) -- primary one for math and physics
+  - uses their own indexing instead of DOI
+* [bioRxiv.org](https://www.biorxiv.org/) -- primary one for biology
+* [medRxiv.org](https://www.medrxiv.org/) -- primary one for health sciences
 * many others
-* most are free
+  - including [OSF-hosted servers](https://osf.io/preprints/)
 
 ---
 # Data Repositories
@@ -273,7 +290,7 @@ why?
 * Zenodo
   - https://zenodo.org/
   - approved by UF IT for data storage (workshops forthcoming)
-  - free to use, 50 GB capacity, supported by CERN
+  - 50 GB capacity, supported by CERN
 * Dryad - https://datadryad.org
 * figshare - https://figshare.com
 
@@ -283,7 +300,7 @@ why?
 Additional Notes
 * Use whatever is common for your field / journal
 * Be aware of sharing restrictions for protected/private data
-* [Research Data Management Libguide](https://guides.uflib.ufl.edu/datamanagement) 
+* See the [Research Data Management Libguide](https://guides.uflib.ufl.edu/datamanagement) for details
 
 ---
 # General Purpose Repositories
@@ -291,11 +308,11 @@ Additional Notes
 * Open Science Framework
   - https://osf.io/
   - files can be uploaded or linked through github, dropbox, google drive, etc.
-  - can embed projects within other projects
+  - projects can be embedded within other projects
   - can issue DOIs for public projects
 
 ---
-# Tooling Specific Repositories
+# Tooling-Specific
 
 For specific (common) applications:
 * laboratory protocols and handy app -- https://www.protocols.io/
